<resources>
    <!-- Activity Titles -->
    <string name="activity_name_preferences">Preferences</string>
    <string name="app_name">EX-TestCS</string>

    <!-- Menus -->

    <string name="menu_item_preferences">Preferences</string>
    <string name="menu_item_reopen_connections">Re-start connections</string>
    <string name="menu_item_exit">Exit</string>

    <!-- Background service -->

    <string name="background_service_started">Background service started</string>
    <string name="background_service_stopped">Background service stopped</string>
    <string name="background_service_label">Return to EX-TestCS</string>
    <string name="background_service_connected">Background service connected</string>
    <string name="background_service_disconnected">Background service disconnected</string>

    <!-- Permissions -->

    <string name="toast_permissions_storage">READ_EXTERNAL_STORAGE is needed to read myAutomation.h</string>

    <!-- UI -->

    <string name="ui_server">---&gt;</string>
    <string name="ui_client">&lt;---</string>
    <string name="ui_processing">----</string>
    <string name="ui_send_button">Send</string>
    <string name="ui_clear_button">Clear</string>

    <!-- Dialogs -->

    <string name="dialog_exit_text">Exit EX-TestCS?</string>
    <string name="dialog_exit_title">Exit</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">"OK"</string>
    <string name="cancel">"Cancel"</string>

    <!-- preference summaries and titles -->
    <string name="pref_preferences_summary">Preferences for EX-TestCS</string>

    <string name="pref_dcc_ex_version_summary">EX-CS version that will be reported when connected. \n Must be of the form Xxx.Xxx.Xxx (two decimals)</string>
    <string name="pref_dcc_ex_version_title">DCC-EX version</string>

    <string name="pref_dcc_ex_board_summary">Arduino board that will be reported when connected</string>
    <string name="pref_dcc_ex_board_title">DCC-EX board</string>

    <string name="pref_dcc_ex_motor_shield_summary">Motor shield that will be reported when connected</string>
    <string name="pref_dcc_ex_motor_shield_title">DCC-EX motor shield</string>

    <string name="pref_dcc_ex_current_max_summary">Maximum current that will be reported when connected</string>
    <string name="pref_dcc_ex_current_max_title">DCC-EX Current max</string>

    <string name="pref_loco_address_summary">Loco DCC address will be reported when connected</string>
    <string name="pref_loco_address_title">Loco DCC address</string>

    <string name="pref_random_locos_summary">Show some random loco movements</string>
    <string name="pref_random_locos_title">Random Locos</string>

    <string name="pref_random_currents_summary">Show some random changes to the track current</string>
    <string name="pref_random_currents_title">Random Track Current</string>

    <!-- preference default values -->
    <string name="pref_dcc_ex_version_default">4.2.54</string>
    <string name="pref_dcc_ex_board_default">MEGA</string>
    <string name="pref_dcc_ex_motor_shield_default">STANDARD_MOTOR_SHIELD</string>
    <string name="pref_dcc_ex_current_max_default">1472</string>

    <string name="pref_loco_address_default">1234</string>


</resources>